# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt  mainpage.md
include/cppProjectTemplate/: lib.hpp
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp
